Add mt5.py and update .gitignore

--- a/tokenisation_and_labeling.ipynb
+++ b/tokenisation_and_labeling.ipynb
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "9d97ef2e",
    "metadata": {},
    "outputs": [
@@ -530,7 +530,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Labeled CSV saved to: ../IndicGEC2025/Hindi\\labeled_sentences.csv\n"
+      "✅ Labeled CSV saved to: /labeled_sentences.csv\n"
      ]
     }
    ],
